DNS architecture and Bootstraping proccess defined. To be tested

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,9 @@
     <groupId>edu.gmu.cs675</groupId>
     <artifactId>Scalable-CAN</artifactId>
     <version>1.0</version>
-    
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
      <build>
          <plugins>
               <plugin>
